MINOR REFRACTORING and added androidTest (#2)
added androidTest and minor refractor

--- a/app/src/main/res/layout/fragment_cat.xml
+++ b/app/src/main/res/layout/fragment_cat.xml
@@ -14,7 +14,7 @@
 
         <variable
             name="itemClickListener"
-            type="com.jk.catastrophic.callbacks.OnItemClickListner" />
+            type="com.jk.catastrophic.callbacks.OnItemClickListener" />
 
     </data>
 
